welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:43: error: not found: value /
/faireFleurs(Color.cyan)
^